<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitePrincipale">

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/screen"
        android:text="0"
        android:textSize="18sp"
        android:fontFamily="monospace"
        android:textAlignment="viewEnd"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calculator_button_n7"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n7"></Button>

            <Button
                android:id="@+id/calculator_button_n8"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n8"></Button>

            <Button
                android:id="@+id/calculator_button_n9"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n9"></Button>

            <Button
                android:id="@+id/calculator_button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setOperator"
                android:text="@string/calculator_button_plus"></Button>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calculator_button_n4"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n4"></Button>

            <Button
                android:id="@+id/calculator_button_n5"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n5"></Button>

            <Button
                android:id="@+id/calculator_button_n6"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n6"></Button>

            <Button
                android:id="@+id/calculator_button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setOperator"
                android:text="@string/calculator_button_minus"></Button>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calculator_button_n1"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n1"></Button>

            <Button
                android:id="@+id/calculator_button_n2"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n2"></Button>

            <Button
                android:id="@+id/calculator_button_n3"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n3"></Button>

            <Button
                android:id="@+id/calculator_button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setOperator"
                android:text="@string/calculator_button_multiply"></Button>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calculator_button_n0"
                style="@style/DigitBtnStyle"
                android:text="@string/calculator_button_n0"></Button>

            <Button
                android:id="@+id/calculator_button_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/calculator_button_equals"></Button>

            <Button
                android:id="@+id/calculator_button_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setOperator"
                android:text="@string/calculator_button_divide"></Button>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/calculator_textview_prompt"
        android:layout_width="378dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#FF1100"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>